# pvcnn

./: .gitignore  pyproject.toml  requirements.txt
pvcnn/: __init__.py  ball_query.py  frustum.py  loss.py  pointnet.py  pvconv.py  train.py  train_dml.py  voxelization.py
pvcnn/configs/: __init__.py
pvcnn/configs/kitti/: __init__.py
pvcnn/configs/kitti/frustum/: __init__.py  pointnet.py  pointnet2.py  pvcnne.py
pvcnn/configs/s3dis/: __init__.py
pvcnn/configs/s3dis/pointnet/: __init__.py  area5.py
pvcnn/configs/s3dis/pvcnn/: __init__.py
pvcnn/configs/s3dis/pvcnn/area5/: c0p125.py
pvcnn/configs/s3dis/pvcnn2/: __init__.py
pvcnn/configs/shapenet/: __init__.py  pointnet.py  pointnet2msg.py  pointnet2ssg.py
pvcnn/configs/shapenet/pvcnn/: __init__.py  c0p25.py
pvcnn/datasets/: __init__.py
pvcnn/datasets/kitti/: __init__.py  attributes.py  frustum.py
pvcnn/evaluate/kitti/frustum/: eval.py
pvcnn/evaluate/s3dis/: eval.py
pvcnn/evaluate/shapenet/: eval.py
pvcnn/functional/: __init__.py  ball_query.py  devoxelization.py  grouping.py  interpolatation.py  sampling.py  voxelization.py
pvcnn/functional/src/interpolate/: trilinear_devox.cpp  trilinear_devox.hpp
pvcnn/functional/src/voxelization/: vox.cpp  vox.cu  vox.hpp
pvcnn/meters/kitti/: frustum.py
pvcnn/models/: utils.py
pvcnn/models/kitti/: __init__.py
pvcnn/models/kitti/frustum/: __init__.py  center_regression_net.py  frustum_net.py
pvcnn/models/s3dis/: __init__.py  pointnet.py  pvcnn.py  pvcnnpp.py
pvcnn/models/shapenet/: __init__.py  pointnet.py  pvcnn.py
pvcnn/utils/: config.py
(+7 files in other folders)
