
[project]
name = "pvcnn"
version = "0.1.0"
description = "Installable fork of https://github.com/mit-han-lab/pvcnn"
authors = [
    {name = "Guilherme Pires", email = "mail@gpir.es"},
]
dependencies = ["torch", "tensorboardX", "numpy", "scipy", "numba", "tqdm", "h5py", "plyfile", "six"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
pvcnn-train = "pvcnn.train:main"
pvcnn-train-dml = "pvcnn.train_dml:main"
